woohoo fixed most of the column alignment issues

--- a/css/index.css
+++ b/css/index.css
@@ -8252,6 +8252,3 @@ h5 {
 .container {
   max-width: 800px;
 }
-.container1 {
-  border: 1px solid red;
-}
