--- a/less/layout.less
+++ b/less/layout.less
@@ -10,7 +10,3 @@ h1, h2, h3, h4, h5 {
 .container {
     max-width: 800px;
 }
-
-.container1 {
-	border: 1px solid red;
-}
